--- a/client/styles/Player.module.scss
+++ b/client/styles/Player.module.scss
@@ -6,9 +6,23 @@
   display: flex;
   align-items: center;
   padding: 0 10px;
-  background-color: rgb(2, 203, 238);
+  background-color: rgb(20, 93, 105);
+  color: white;
 }
 
 .volumeUp {
   margin-left: auto;
+}
+
+.color {
+  color: white;
+}
+
+.trackName {
+  color: rgb(345, 300, 194);
+}
+
+.artist {
+  font-size: 12px;
+  color: rgb(255, 239, 12);
 }
