--- a/client/styles/index.module.scss
+++ b/client/styles/index.module.scss
@@ -9,7 +9,8 @@
   }
   h3 {
     font-size: 1.8em;
-    color: rgb(41, 191, 196);
+    // color: rgb(41, 191, 196);
+    color: rgb(164, 54, 129);
   }
 }
 
