--- a/client/styles/globals.css
+++ b/client/styles/globals.css
@@ -1,3 +1,9 @@
+html {
+  height: 100%;
+  background: url("/static/image/blue-sky-clouds-watercolor-texture-background.jpg") no-repeat  ;
+}
+
 body {
-  background: url("/static/image/blue-sky-clouds-watercolor-texture-background.jpg") no-repeat;
+  background-color: rgba(255,255,255,0.4);
+  min-height: 100%;
 }
