--- a/client/styles/Player.module.scss
+++ b/client/styles/Player.module.scss
@@ -5,7 +5,7 @@
   bottom: 0;
   display: flex;
   align-items: center;
-  padding: 0 10px;
+  padding: 0 20px 0 10px;
   background-color: rgb(20, 93, 105);
   color: white;
 }
@@ -25,4 +25,11 @@
 .artist {
   font-size: 12px;
   color: rgb(255, 239, 12);
+}
+
+.repeat {
+  margin-left: 10px;
+  height: 30px;
+  width: 30px;
+  cursor: pointer;
 }
