--- a/client/styles/tracks/index.module.scss
+++ b/client/styles/tracks/index.module.scss
@@ -4,3 +4,23 @@
   font-size: 1.5em;
   margin-top: 20px;
 }
+
+.container {
+  display: flex;
+  width: "100%";
+  height: 200px;
+  justify-content: center;
+  align-items: center;
+  svg {
+    animation: 0.6s infinite linear spinner;
+  }
+}
+
+@keyframes spinner {
+  from {
+    translate: rotate(0deg);
+  }
+  to {
+    transform: rotate(180deg);
+  }
+}
