--- a/client/styles/tracks/TrackPage.module.scss
+++ b/client/styles/tracks/TrackPage.module.scss
@@ -11,6 +11,7 @@
 
 .info {
   margin-left: 30px;
+  max-width: 67%;
 }
 
 .wrapper {
@@ -28,15 +29,20 @@
 .artist {
   margin-top: 0;
   font-size: 15px;
+  background: -webkit-linear-gradient(45deg, #d72261, #e821ca 70%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  word-wrap: break-word;
 }
 
 .trackName {
-  font-size: 3em;
-  line-height: 3rem;
+  font-size: 2.5em;
+  line-height: 2.5rem;
+  word-wrap: break-word;
 }
 
 .listens {
-  margin: 37px 0 0 0;
+  margin-top: 15px;
 }
 
 .username {
