--- a/client/styles/index.module.scss
+++ b/client/styles/index.module.scss
@@ -18,3 +18,15 @@
   width: 300px;
   height: 60px;
 }
+
+@media (max-width: 768px) {
+  .center {
+    margin-top: 0;
+  }
+  .buttonContainer {
+    gap: 40px;
+  }
+  .header {
+    margin: 0;
+  }
+}
