--- a/client/styles/tracks/favorite.module.scss
+++ b/client/styles/tracks/favorite.module.scss
@@ -14,3 +14,15 @@
 .pb {
   padding-bottom: 100px;
 }
+
+@media (max-width: 768px) {
+  .header {
+    font-size: 25px;
+  }
+  .wrapper {
+    padding-bottom: 10px;
+  }
+  .box {
+    padding-bottom: 0;
+  }
+}
