--- a/client/styles/TrackProgressBar.module.scss
+++ b/client/styles/TrackProgressBar.module.scss
@@ -74,3 +74,15 @@
     font-size: 15px;
   }
 }
+
+@media (max-width: 576px) {
+  .audioWrapper {
+    flex-basis: 86%;
+  }
+  .trackName {
+    font-size: 18px;
+  }
+  .artist {
+    font-size: 16px;
+  }
+}
