--- a/client/styles/tracks/TrackItem.module.scss
+++ b/client/styles/tracks/TrackItem.module.scss
@@ -23,8 +23,10 @@
   margin-left: auto;
   cursor: pointer;
   transition: 0.5s all;
-  &:hover {
-    transform: scale(1.4);
+  @media (hover: hover) {
+    &:hover {
+      transform: scale(1.4);
+    }
   }
 }
 
@@ -53,5 +55,40 @@
 @media (max-width: 768px) {
   .listeners {
     display: none;
+  }
+}
+
+@media (max-width: 576px) {
+  .track {
+    margin: 5px;
+    margin-bottom: 15px;
+    padding: 5px;
+  }
+  .img {
+    width: 50px;
+    height: 50px;
+  }
+  .container {
+    margin: 0 10px;
+    max-width: 100%;
+    flex-grow: 1;
+  }
+  .favorite > svg {
+    font-size: 25px;
+  }
+  .iconWrapper {
+    flex-grow: 0;
+    margin-left: auto;
+  }
+  .favorite,
+  .delete,
+  .play {
+    padding: 4px;
+  }
+}
+
+@media (max-width: 410px) {
+  .container {
+    max-width: 39%;
   }
 }
